--- a/style.css
+++ b/style.css
@@ -35,3 +35,99 @@ body,
   margin-right: -50%;
   transform: translate(-50%, -50%);
 }
+/* check box */
+.container {
+  position: absolute;
+  top: -29.8px;
+  left: 0px;
+  width: 200px;
+  background-color: #ebeef7;
+  padding: 10px;
+  min-height: 50px;
+  display: none;
+  margin: 30px auto;
+}
+.container .input-box-wrapper {
+  position: relative;
+}
+.input-box-wrapper .box {
+  position: relative;
+  background-color: #f3f3f7;
+  display: flex;
+  align-items: center;
+  border: 1px solid #70707c8e;
+  border-bottom: 0;
+  padding: 2px;
+}
+.input-box-wrapper .box label {
+  color: #5e5a5a;
+  text-transform: capitalize;
+  margin-left: 20px;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+}
+input[type="checkbox"] {
+  position: relative;
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+}
+.input-box-wrapper .box:not(:first-child) {
+  padding-left: 0px;
+}
+.input-box-wrapper .box:first-child {
+  padding-right: 2px;
+}
+.input-box-wrapper .box:last-child {
+  border-bottom: 1px solid#4d4d507e;
+}
+.print-values {
+  position: relative;
+  margin-top: 2rem;
+}
+.print-values p {
+  background-color: #1e1e2e;
+  padding: 16px;
+  color: #ffffff;
+}
+#export {
+  position: absolute;
+  border: 1px solid rgba(0, 0, 0, 0.103);
+  width: 30px;
+  height: 30px;
+
+  top: 319px;
+  left: 15px;
+}
+.fas {
+  font-weight: lighter;
+}
+.esri-widget--button {
+  border-radius: 5px;
+  color: rgba(39, 40, 41, 0.623);
+  font-size: 20px;
+  font-weight: 100;
+  background-color: rgb(255, 253, 253);
+}
+.esri-expand__panel,
+.esri-expand {
+  background-color: #fcf7f7fb;
+  font-size: 0px;
+  width: 32px;
+  height: 32px;
+  border-radius: 5px;
+}
+.esri-collapse__icon,
+.esri-icon {
+  font-size: 20px;
+  font-weight: lighter;
+}
+.esri-icon:hover,
+.esri-collapse__icon:hover,
+.fas:hover {
+  color: rgb(3, 231, 247);
+}
+.esri-scale-bar__line {
+  background-color: #ffffff;
+}
