--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ body,
 /* check box */
 .container {
   position: absolute;
-  top: -29.8px;
+  top: -29.1px;
   left: 0px;
   width: 200px;
   background-color: #ebeef7;
   padding: 10px;
   min-height: 50px;
-  display: none;
+  border-radius: 4px;
   margin: 30px auto;
 }
 .container .input-box-wrapper {
@@ -60,7 +60,7 @@ body,
   padding: 2px;
 }
 .input-box-wrapper .box label {
-  color: #5e5a5a;
+  color: #030303;
   text-transform: capitalize;
   margin-left: 20px;
   cursor: pointer;
@@ -75,9 +75,11 @@ input[type="checkbox"] {
 }
 .input-box-wrapper .box:not(:first-child) {
   padding-left: 0px;
+  border-radius: 4px;
 }
 .input-box-wrapper .box:first-child {
   padding-right: 2px;
+  border-radius: 4px;
 }
 .input-box-wrapper .box:last-child {
   border-bottom: 1px solid#4d4d507e;
@@ -112,8 +114,7 @@ input[type="checkbox"] {
 }
 .esri-expand__panel,
 .esri-expand {
-  background-color: #fcf7f7fb;
-  font-size: 0px;
+  font-size: 16px;
   width: 32px;
   height: 32px;
   border-radius: 5px;
